https://bugs.webkit.org/show_bug.cgi?id=94848 When paged-x/y is specified on the root, columnGap is ignored, and garbage pixels are likely

Source/WebCore:

Reviewed by Dan Bernstein.

We used to call setPagination() from applyOverflowToViewport(), but that is too
late. We want to setPagination() before we actually lay anything out so that all
of the styles (including columnGap!) will be properly set on the RenderView.

No longer handle pagination here since we take care of it in
applyPaginationToViewport()
* page/FrameView.cpp:
(WebCore::FrameView::applyOverflowToViewport):

New function to call setPagination(). This function gets the appropriate renderer
and uses its RenderStyle to determine if pagination should be set.
(WebCore::FrameView::applyPaginationToViewport):
(WebCore):

Call applyPaginationToViewport() before the call to updateStyleIfNeeded().
(WebCore::FrameView::layout):

This code was meant to prevent garbage pixels in column gaps for pagination on the
RenderView, but paintContents() does not always get called when we paint into
tiles, so I moved this code to RenderView.
(WebCore::FrameView::paintContents):
* page/FrameView.h:
(FrameView):

The code from RenderView::paintContents() to prevent garbage pixels is moved here.
* rendering/RenderView.cpp:
(WebCore::RenderView::paint):

LayoutTests:

Reviewed by Dan Bernsetin.

New tests.
* fast/overflow/paged-x-div-with-column-gap.html: Added.
* fast/overflow/paged-x-with-column-gap.html: Added.
* platform/mac/fast/overflow/paged-x-div-with-column-gap-expected.png: Added.
* platform/mac/fast/overflow/paged-x-div-with-column-gap-expected.txt: Added.
* platform/mac/fast/overflow/paged-x-with-column-gap-expected.png: Added.
* platform/mac/fast/overflow/paged-x-with-column-gap-expected.txt: Added.

Updated results needed for Chromium.
* platform/chromium/TestExpectations:



Canonical link: https://commits.webkit.org/113017@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@126840 268f45cc-cd09-0410-ab3c-d52691b4dbfc